# ErrorVolumePolytopes

./: .gitignore  NOTES.md  README.md  README_PROJECT.md  main.py  notes_augmentation_v2.md  notes_cnn_polytope_width.md  notes_implementation_issues.md  notes_mcmc_chord.md  pyproject.toml
checkpoints/: fashion_cnn_best.pth  smallmlp_10.pth
data/: README.md  fashionMNIST_augmented_cnn_seed42.pt  fashionMNIST_augmented_cnn_seed42_log.json  fashionMNIST_augmented_cnn_seed42_walk_log.json  fashionMNIST_augmented_cnn_seed42_walk_qcorrect.pt  fashionMNIST_augmented_cnn_seed42_walk_qcorrect_log.json  fashionMNIST_augmented_cnn_seed42_walk_qincorrect.pt  fashionMNIST_augmented_cnn_seed42_walk_qincorrect_log.json  fashionMNIST_augmented_mlp_seed42.pt  fashionMNIST_augmented_mlp_seed42_log.json  fashionMNIST_augmented_mlp_seed42_walk_1point.pt  fashionMNIST_augmented_mlp_seed42_walk_log.json  fashionMNIST_augmented_mlp_seed42_walk_qcorrect.pt  fashionMNIST_augmented_mlp_seed42_walk_qcorrect_log.json  fashionMNIST_augmented_mlp_seed42_walk_qincorrect.pt  fashionMNIST_augmented_mlp_seed42_walk_qincorrect_log.json  mnist_data.py  qmodel_qcorrect_cnn_b4.pt  qmodel_qcorrect_mlp_b4.pt  qmodel_qincorrect_cnn_b4.pt  qmodel_qincorrect_mlp_b4.pt  qmodel_samples_cnn_b4.json  qmodel_samples_mlp_b4.json
docs/: architecture.md
notebooks/: plot_convergence.ipynb  plot_volumes.ipynb  plot_volumes_1point.ipynb  plot_volumes_aug.ipynb  plot_volumes_new.ipynb  plot_volumes_v3k.ipynb  sanity_check_V3k.ipynb  test_convergence.ipynb  test_data_augmentation_mcmc.ipynb  test_polytopes.ipynb  (+7 more)
(+222 files in other folders)
